tool/kube/project/Prometheus/prometheus.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: prometheus
    labels:
        app: prometheus
spec:
    serviceName: 'prometheus'
    updateStrategy:
        type: RollingUpdate
    replicas: 3
    selector:
        matchLabels:
            app: prometheus
    template:
        metadata:
            labels:
                app: prometheus
                thanos-store-api: 'true'
        spec:
            serviceAccountName: prometheus
            volumes:
                - name: prometheus-config
                  configMap:
                      name: prometheus-config
                - name: prometheus-data
                  hostPath:
                      path: /data/prometheus
                - name: prometheus-config-shared
                  emptyDir: {}
            containers:
                - name: prometheus
                  image: prom/prometheus:v2.11.1
                  args:
                      - --config.file=/etc/prometheus-shared/prometheus.yml
                      - --web.enable-lifecycle
                      - --storage.tsdb.path=/data/prometheus
                      - --storage.tsdb.retention=2w
                      - --storage.tsdb.min-block-duration=2h
                      - --storage.tsdb.max-block-duration=2h
                      - --web.enable-admin-api
                  ports:
                      - name: http
                        containerPort: 9090
                  volumeMounts:
                      - name: prometheus-config-shared
                        mountPath: /etc/prometheus-shared
                      - name: prometheus-data
                        mountPath: /data/prometheus
                  livenessProbe:
                      httpGet:
                          path: /-/healthy
                          port: http
                - name: watch
                  image: watch
                  args:
                      [
                          '-v',
                          '-t',
                          '-p=/etc/prometheus-shared',
                          'curl',
                          '-X',
                          'POST',
                          '--fail',
                          '-o',
                          '-',
                          '-sS',
                          'http://localhost:9090/-/reload',
                      ]
                  volumeMounts:
                      - name: prometheus-config-shared
                        mountPath: /etc/prometheus-shared
                - name: thanos
                  image: improbable/thanos:v0.6.0
                  command: ['/bin/sh', '-c']
                  args:
                      - PROM_ID=`echo $POD_NAME| rev | cut -d '-' -f1` /bin/thanos sidecar
                        --prometheus.url=http://localhost:9090
                        --reloader.config-file=/etc/prometheus/prometheus.yml.tmpl
                        --reloader.config-envsubst-file=/etc/prometheus-shared/prometheus.yml
                  ports:
                      - name: http-sidecar
                        containerPort: 10902
                      - name: grpc
                        containerPort: 10901
                  volumeMounts:
                      - name: prometheus-config
                        mountPath: /etc/prometheus
                      - name: prometheus-config-shared
                        mountPath: /etc/prometheus-shared
