tool/kube/project/Prometheus/Querier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: thanos-query
    name: thanos-query
spec:
    replicas: 2
    selector:
        matchLabels:
            app: thanos-query
    minReadySeconds: 5
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 1
    template:
        metadata:
            labels:
                app: thanos-query
        spec:
            containers:
                - args:
                      - query
                      - --log.level=debug
                      - --query.timeout=2m
                      - --query.max-concurrent=20
                      - --query.replica-label=replica
                      - --query.auto-downsampling
                      - --store=dnssrv+thanos-store-gateway.default.svc
                      - --store.sd-dns-interval=30s
                  image: improbable/thanos:v0.6.0
                  name: thanos-query
                  ports:
                      - containerPort: 10902
                        name: http
                      - containerPort: 10901
                        name: grpc
                  livenessProbe:
                      httpGet:
                          path: /-/healthy
                          port: http
---
apiVersion: v1
kind: Service
metadata:
    labels:
        app: thanos-query
    name: thanos-query
spec:
    type: LoadBalancer
    ports:
        - name: http
          port: 10901
          targetPort: http
    selector:
        app: thanos-query
---
apiVersion: v1
kind: Service
metadata:
    labels:
        thanos-store-api: 'true'
    name: thanos-store-gateway
spec:
    type: ClusterIP
    clusterIP: None
    ports:
        - name: grpc
          port: 10901
          targetPort: grpc
    selector:
        thanos-store-api: 'true'
