tool/kube/project/Prometheus/alertmanager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: alertmanager
spec:
    replicas: 3
    selector:
        matchLabels:
            app: alertmanager
    template:
        metadata:
            name: alertmanager
            labels:
                app: alertmanager
        spec:
            containers:
                - name: alertmanager
                  image: prom/alertmanager:latest
                  args:
                      - --web.route-prefix=/alertmanager
                      - --config.file=/etc/alertmanager/config.yml
                      - --storage.path=/alertmanager
                      - --cluster.listen-address=0.0.0.0:8001
                      - --cluster.peer=alertmanager-peers.default:8001
                  ports:
                      - name: alertmanager
                        containerPort: 9093
                  volumeMounts:
                      - name: alertmanager-config
                        mountPath: /etc/alertmanager
                      - name: alertmanager
                        mountPath: /alertmanager
            volumes:
                - name: alertmanager-config
                  configMap:
                      name: alertmanager-config
                - name: alertmanager
                  emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
    labels:
        name: alertmanager-peers
    name: alertmanager-peers
spec:
    type: ClusterIP
    clusterIP: None
    selector:
        app: alertmanager
    ports:
        - name: alertmanager
          protocol: TCP
          port: 9093
          targetPort: 9093
